--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@ html, body, :root {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
         display: none;
+        scrollbar-width: none;
     }
 
     /* Hide scrollbar for IE, Edge and Firefox */
